<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#372c24"
        android:text="Email address"/>

    <EditText android:id="@+id/email_txt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="20dip"
        android:hint="@string/login_email_hint"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/email"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/order_ref"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#372c24"
        android:layout_below="@+id/email_txt"
        android:text="Order Reference"/>

    <EditText android:id="@+id/order_ref_txt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="20dip"
        android:hint="@string/order_ref_hint"
        android:layout_below="@+id/order_ref"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/cs_msg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#372c24"
        android:layout_below="@+id/order_ref_txt"
        android:text="Message"/>

    <EditText android:id="@+id/cs_msg_txt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="25dip"
        android:hint="@string/cs_msg_hint"
        android:layout_below="@+id/cs_msg"
        android:inputType="textMultiLine"
        android:maxLines="6"
        android:scrollbars="vertical"
        android:background="@drawable/edittext_bg"/>

        <Button
            android:id="@+id/send_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Send"
            android:background="@drawable/red_button3"
            style="@style/button_text2"
            android:layout_below="@+id/cs_msg_txt"
            android:layout_centerHorizontal="true" />

</RelativeLayout>


